IMPROVEMENT: Fixed layout shift caused by spawning scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,9 +70,15 @@
 }
 
 @layer base {
+  html {
+    overflow-x: hidden;
+    margin-right: calc(-1 * (100vw - 100%));
+  }
+
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground antialiased;
   }
